Added displaying tags with amount of questions

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,6 @@
     <title>Tag Browsers App</title>
   </head>
   <body>
-    <div
-      id="root"
-      class="bg-gradient-to-b from-cyan-500 to-blue-500 h-screen"
-    ></div>
+    <div id="root" class=""></div>
   </body>
 </html>
