Added padding for content

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
     <title>Tag Browsers App</title>
   </head>
   <body>
-    <div id="root" class=""></div>
+    <div id="root"></div>
   </body>
 </html>
